# udirc_hacking

./: .gitignore  CMakeLists.txt  README.md  UdircExample.cpp  UdircProvider.cpp  sample-idle-output.txt
inc/: Hexdump.hpp  UdircConnection.h  UdircController.h  UdircProtocol.h  Utilities.h
